# app_histories

./: .gitignore  404.html  Dockerfile  LICENSE.md  LanguagesinApps.ipynb  README.md  ab_testing.csv  apptainer.def  exception.py  index.html  mkdocs.yml  pipeline.py  pyproject.toml  run_app_studies.sh  setup.py  test_smoke.py  testing.py
.github/workflows/: ci.yml  docs.yml  run_tests.yml
.ipynb_checkpoints/: AnimateNetworks-checkpoint.ipynb  LanguagesinApps-checkpoint.ipynb
Analysis/: analysis.py
DEX/: dex.py
ab/: find_ab_packages.py  read_interface.py
ab/abtasty/: index.html
ab/adapty/: index.html
ab/adobe/: index.html
ab/amplitude/: index.html
ab/apphud/: index.html
ab/applause/: index.html
ab/apptimize/: index.html
ab/batch/: index.html
ab/clevertap/: index.html
ab/configcat/: index.html
ab/gameanalytics/: index.html
ab/games of whales/: index.html
ab/google/: index.html
ab/huawei/: index.html
ab/kameleoon/: index.html
ab/launchdarkly/: index.html
ab/mparticle/: index.html
ab/optimilzely/: index.html
ab/posthog/: index.html
ab/qonversion/: index.html
ab/shence/: index.html
ab/split/: index.html
ab/splitforce/: index.html
ab/statsig/: index.html
ab/swrv/: index.html
ab/taplytics/: index.html
ab/umeng/: index.html
ab/unity/: index.html
ab/uxcam/: index.html
ab/vwo/: index.html
app_histories/Analysis/: analysis.py
app_histories/classify/: classify_so.py  safe_class.py
app_histories/manifest/: manifests.py
build_documentation/: README.md  ab.md  convert_csv_md.py
dev/: index.html
dev/cli/: index.html
dev/download/: index.html
dev/getting-started/: index.html
dev/logging/: index.html
dev/profiling/: index.html
dev/results/: index.html
dex/: dex.py
docs/: hpc.md  hugo.toml  index.md  installation.md  methods.md
docs/ab/: .md  abtasty.md  adapty.md  adobe.md  amplitude.md  apphud.md  applause.md  apptimize.md  batch.md  clevertap.md  configcat.md  gameanalytics.md  games of whales.md  google.md  huawei.md  kameleoon.md  launchdarkly.md  mparticle.md  optimilzely.md  posthog.md  qonversion.md  shence.md  split.md  splitforce.md  statsig.md  swrv.md  taplytics.md  umeng.md  unity.md  uxcam.md  vwo.md
docs/dev/: cli.md  download  download.md  getting-started.md  index.md  logging.md  profiling.md  results.md
docs/howto/: app_language.md  cli.md  dex-tracing.md
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/tutorials/: ab.md  listening.md  (+3 more)
document/: ab.md  convert_csv_md.py
downloader/: README.md  azkey.ini  download.py  test_download.py
extract/: extract.py
general/: create_image.py  get_files.py  helpers.py  visualisation.py
interface/: ab.py  language.txt  read_interface.py
localisation/: localisation.py
manifest/: manifests.py
methods/: index.html
personalisation/: notes.md  personalisation.py
search/: search_index.json
software/: parse_software.py
tests/: test_analyse_api.py  test_apk.py  test_built_urls.py  test_bundle.py  test_cli_inputs.py  test_dex.py  test_flow_chains.py  test_flows.py  test_general_network.py  test_helper.py  test_listening.py  test_localisation.py  test_metadata.py  test_metadata_csv.py  test_model_linkage.py  test_perf.py  test_smoke.py  test_trackers.py
viewer/: index.html
(+95 files in other folders)
