[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cim_app_histories"
version = "0.0.1"
dependencies = [
  "pandas",
  "androguard",
]

authors = [
  {name = "Iain Emsley", email = "iain.emsley@warwick.ac.uk"},
]
description = "Experimental toolkit to work with APK data"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["android", "digital method", "apps"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "Programming Language :: Python :: 3",
]

#[tool.setuptools]
#package-dir = {"" = "app_histories"}